--- a/.travis.yml
+++ b/.travis.yml
@@ -51,13 +51,13 @@ dist: trusty
 
 addons:
   chrome: stable
-  apt:
-    packages:
-    - qt5-default
-    - libqt5webkit5-dev
-    - gstreamer1.0-plugins-base
-    - gstreamer1.0-tools gstreamer1.0-x
-    - google-chrome-stable
+#  apt:
+#    packages:
+#    - qt5-default
+#    - libqt5webkit5-dev
+#    - gstreamer1.0-plugins-base
+#    - gstreamer1.0-tools gstreamer1.0-x
+#    - google-chrome-stable
 cache:
   bundler: true
 
@@ -82,7 +82,7 @@ env:
 
 services:
 - redis-server
-- postgresql
+#- postgresql
 before_script:
 - jdk_switcher use oraclejdk8
 
